Added breakfast menu

--- a/breakfasts.html
+++ b/breakfasts.html
@@ -44,26 +44,77 @@
         </div>
       </nav>
 
+      <div class="row p-0">
+        <img src="images/banner.jpg" class="d-block w-100 banner" alt="...">
+      </div>
+    
 
-      <div class="container-fluid no-getters">
-        <div class="row">
-            <img src="images/banner.jpg" class="banner" alt="...">
+
+
+
+    <div class="container-fluid-s p-0">
+      <div class="row p-0 itemMenu">
+        <div class="col-3">
+          <h4>Bacon</h4>
+          <h4>Sausage</h4>
+          <h4>Bacon & Sausage</h4>
+          <h4>Bacon & Egg</h4>
+          <h4>Sausage & Egg</h4>
+          <h4>Bacon, Sausage & Egg</h4> 
+          <h4>Bacon, Egg & Hash Brown</h4>
+          <h4>Bacon & Scrambled Eggs</h4>
+          <h4>Sausage & Scrambled Egg</h4>
+          <h4>Sausage, Egg & Hash Browns</h4>
+          <h4>Bacon, Sausage & Hash Brown</h4>
+          <h4>Sausage, Egg & Black Pudding</h4>
+          <h4>Bacon, Sausage & Black Pudding</h4>
+          <h4>Bacon, Egg & Mushroom</h4>
+          <h4>bacon & Cheese</h4>
+          <h4>Sausage & Cheese</h4>
+          <h4>Sausage, Cheese & Onion</h4>
+          <h4>Sausage, Bacon & Cheese</h4>
+          <h4>Sausage, Bacon, Egg, Hash Brown, Mushroom & Black Puuding</h4>
         </div>
-    </div>
-
-
-
-
-    <div class="container-fluid p-0">
-        <div class="row p-0 orderMenu">
-            <div class="col-3">
-                <h1>Item:<h1>
-            </div>
+        <div class="col-3">
+          <h4>£3.60</h4>
+          <h4>£3.60</h4>
+          <h4>£4.50</h4>
+          <h4>£4.05</h4>
+          <h4>£4.05</h4>
+          <h4>£4.95</h4>
+          <h4>£4.70</h4>
+          <h4>£4.70</h4>
+          <h4>£4.70</h4>
+          <h4>£4.70</h4>
+          <h4>£5.00</h4>
+          <h4>£4.70</h4>
+          <h4>£5.00</h4>
+          <h4>£4.90</h4>
+          <h4>£4.25</h4>
+          <h4>£4.25</h4>
+          <h4>£4.50</h4>
+          <h4>£5.10</h4>
+          <h4>£6.40</h4>
         </div>
-        
-
-
-
+        <div class="col-3">
+          <h4>Veggie Sausage</h4>
+          <h4>Veggie Sausage & Egg</h4>
+          <h4>Double Egg & Mushroom</h4>
+          <h4>Veggie Sausage, Egg & Hash Brown</h4>
+          <h4>Veggie Sausage, Cheese & Onion</h4>
+          <h4>Egg, Mushrooms, Cheese & Hash Brown</h4>
+          <h4><h4>Veggie Sausage, Egg, Mushrooms, Hash Brown & Fried Tomatoes</h4>
+        </div>
+        <div class="col-3">
+          <h4>£3.60</h4>
+          <h4>£4.05</h4>
+          <h4>£4.70</h4>
+          <h4>£4.70</h4>
+          <h4>£4.50</h4>
+          <h4>£4.90</h4>
+          <h4>£5.60</h4>
+        </div>
+      </div>
     </div>
 </body>
 
