--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
 
     <h1>Hello.</h1>
 </body>
+<footer class="w-100 bg-dark fixed-bottom">
+  <h1 class="p-4">FOOTER</h1>
 
+</footer>
 
 
 <script src="scripts/scripts.js"></script>
