Polished up index page's banner and footer

--- a/breakfasts.html
+++ b/breakfasts.html
@@ -52,9 +52,7 @@
 
 
 
-    <div class="container-fluid-s p-0">
-      <div class="row p-0 itemMenu">
-        <div class="col-3">
+    <table>
           <h4>Bacon</h4>
           <h4>Sausage</h4>
           <h4>Bacon & Sausage</h4>
@@ -73,8 +71,12 @@
           <h4>Sausage & Cheese</h4>
           <h4>Sausage, Cheese & Onion</h4>
           <h4>Sausage, Bacon & Cheese</h4>
-          <h4>Sausage, Bacon, Egg, Hash Brown, Mushroom & Black Puuding</h4>
+          <h4>Sausage, Bacon, Egg, Hash Brown, Mushroom & Black Pudding</h4>
         </div>
+
+
+
+
         <div class="col-3">
           <h4>£3.60</h4>
           <h4>£3.60</h4>
@@ -113,9 +115,8 @@
           <h4>£4.50</h4>
           <h4>£4.90</h4>
           <h4>£5.60</h4>
-        </div>
-      </div>
-    </div>
+        
+    </table>
 </body>
 
 
