--- a/index.html
+++ b/index.html
@@ -6,58 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet">
+    <link rel="icon" href="images/sandwich_logo.png">
     <title>Home</title>
 </head>
 
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Loafers Sandwhich Bar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse " id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Menus
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
-                  <li><a class="dropdown-item" href="burgers_chips_roasts.html">Burgers, Chips, & Jackets</a></li>
-                  <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps, & Roasts</a></li>
-                  <li><a class="dropdown-item" href="cold_fillings.html">Cold Fillings & Salads</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="catering.html">Catering</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact_and_order.html">Contact</a>
-              </li>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Loafers Sandwhich Bar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse " id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Menus
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="menus.html">All Menus</a><hr></li>
+              <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
+              <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips, & Jackets</a></li>
+              <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps, & Roasts</a></li>
+              <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salads</a></li>
             </ul>
-          </div>
-        </div>
-      </nav>
-
-
-      <div class="container-fluid no-getters">
-        <div class="row">
-            <img src="images/banner.jpg" class="banner" alt="...">
-        </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="catering.html">Catering</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
+  </nav>
+
+  <div class="row p-0 m-0" style="position: relative;">
+    <img src="images/banner.jpg" class="w-100 banner" alt="...">
+    <div class="pseudoRelative">
+      <div class="w-100 titleBanner"> </div>
+      <h1 class="title">Welcome to Loafers!</h1>
+    </div>
+  </div>
+
+  
 
 
 
 
     <h1>Hello.</h1>
 </body>
-<footer class="w-100 bg-dark fixed-bottom">
-  <h1 class="p-4">FOOTER</h1>
+<footer class="w-100 fixed-bottom">
+  <div class="p-3">
+    <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png" alt="Facebook Logo" width="25" height="25"> Facebook</a>
+    <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png" alt="Twitter Logo" width="25" height="25"> Twitter</a>
+  </div>
 
 </footer>
 
