Added content to index, catering, and contact pages. Added some basic JavaScript for a form as well.

--- a/breakfasts.html
+++ b/breakfasts.html
@@ -45,7 +45,7 @@
       </nav>
 
       <div class="row p-0">
-        <img src="images/banner.jpg" class="d-block w-100 banner" alt="...">
+        <img src="images/banner.jpg" class="d-block w-100 banner" alt="Banner">
       </div>
     
 
