Changed title background to a <p> tag and changed its class name to titleBackground.

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
   <div class="row p-0 m-0">
     <img src="images/banner.jpg" class="w-100 banner" alt="Banner">
     <div class="relativePosTitle">
-      <div class="w-100 titleBanner"> </div>
+      <p class="w-100 titleBackground"></p>
       <h1 class="title">Contact Us!</h1>
     </div>
   </div>
@@ -82,8 +82,6 @@
         </form>
     </div>
   </div>
-
-
 </body>
 
 
