--- a/catering.html
+++ b/catering.html
@@ -49,7 +49,7 @@
   <div class="row p-0 m-0">
     <img src="images/banner.jpg" class="w-100 banner" alt="Banner">
     <div class="relativePosTitle">
-      <div class="w-100 titleBanner"> </div>
+      <p class="w-100 titleBackground"></p>
       <h1 class="title">Welcome to Loafers!</h1>
     </div>
   </div>
