Added to the breakfast menu

--- a/catering.html
+++ b/catering.html
@@ -60,7 +60,7 @@
     </div>
   </div>
 
-  <div class="container-fluid-s">
+  <div class="container-fluid">
     <div class="page-content">
       <p class="pt-3 m-0 text-decoration-underline">Menu A</p>
       <p>£3.50 per person<br>A selection of freshly made sandwiches (4 quarters per person) with assorted fillings on
