--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
     </div>
   </div>
 
-  <div class="container-fluid-s">
+  <div class="container-fluid">
     <div class="page-content">
       <p class="pt-3 text-decoration-underline">How to Contact Us:</p>
       <p class="m-0">If you would like to place an order, please call:</p>
@@ -76,24 +76,27 @@
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5020.22613213925!2d-3.1048!3d51.01406!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2df2125992726a7!2sLoafers%20Sandwich%20Bar!5e0!3m2!1sen!2sus!4v1647881626365!5m2!1sen!2sus"
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-      <p class="pt-5 mt-3 text-decoration-underline">Further Enquires:</p>
+      <p class="pt-5 m-0 mt-3 text-decoration-underline">Further Enquires:</p>
       <p>if you have any further enquires, please fill out this form and we will email you back as soon as we can!</p>
-      <form>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="email">
-          <p class="error" id="email-error"></p>
+
+
+      <section class="form-area">
+        <div class="container-fluid p-0 m-0">
+          <div id="welcome-text">
+          <form onsubmit="changeText()" method="post" id="welcome-form">
+            <label>Please enter your name:</label><br>
+            <input type="text" placeholder="Enter name..." name="fname" required><br>
+            <br>
+            <label>Please enter your email:</label><br>
+            <input type="email" placeholder="Enter email..." required><br>
+            <br>
+            <label>Please enter your enquiry:</label><br>
+            <textarea cols="48" rows="12" placeholder="Message..."></textarea><br>
+            <input type="submit" value="Submit!">
+          </form>
+          </div>
         </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Enquiry</label>
-          <input type="text" class="form-control" id="enquiry">
-          <p class="error" id="enquiry-error"></p>
-        </div>
-        <button type="button" class="btn btn-primary" onclick="sendForm()">Submit</button>
-        <p id="form-sent" class="success lastItem"></p>
-      </form>
-    </div>
-  </div>
+      </section>
 </body>
 
 
