--- a/burgers_chips_jackets.html
+++ b/burgers_chips_jackets.html
@@ -15,13 +15,13 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container-fluid">
+    <div class="container-fluid navbar-conten">
       <a class="navbar-brand" href="index.html">Loafers Sandwhich Bar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse " id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
@@ -49,6 +49,9 @@
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
+        <div class="ms-auto">
+          <div id="dark-button" class="btn btn-primary mx-3 rounded" onclick="toggleDark()">My Account</div>
+        </div>
       </div>
     </div>
   </nav>
