--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
       <a class="navbar-brand" href="index.html">Loafers Sandwhich Bar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon navbar-conten"></span>
       </button>
-      <div class="collapse navbar-collapse " id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
@@ -48,6 +48,9 @@
             <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
           </li>
         </ul>
+        <div class="ms-auto">
+          <div id="account" class="btn btn-primary mx-3 rounded" onclick="toggleDark()">My Account</div>
+        </div>
       </div>
     </div>
   </nav>
