--- a/cold_fillings_salads.html
+++ b/cold_fillings_salads.html
@@ -160,7 +160,7 @@
 
 
 
-            <h2 class="menu-title pt-5">Extras:</h2>
+            <h2 class="menu-title">Extras:</h2>
             <div class="row">
                 <div class="col">
                     <h4>Tomato, Lettuce, Cucumber, Peppers, Red Onion, Sweet Corn, Pineapple & Beetroot</h4>
@@ -190,7 +190,7 @@
 
 
 
-            <h2 class="menu-title pt-5">Salad Boxes:</h2>
+            <h2 class="menu-title">Salad Boxes:</h2>
             <div class="row">
                 <div class="col">
                     <h4>Just Fresh Salad</h4>
@@ -291,17 +291,19 @@
             </div>
         </div>
     </section>
+
+    <div id="footer-spacing"></div>
 </body>
 
 
-<footer class="w-100 fixed-bottom">
+<footer id="footer" class="w-100 fixed-bottom">
     <div class="footer-content p-3">
-        <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png"
-                alt="Facebook Logo" width="25" height="25"> Facebook</a>
-        <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png"
-                alt="Twitter Logo" width="25" height="25"> Twitter</a>
+      <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage" src="Images/facebook.png"
+          alt="Facebook Logo" width="25" height="25"> Facebook</a>
+      <a href="https://twitter.com/loaferstaunton" target="_blank"><img id="twitter-logo" class="footerImage" src="Images/twitter.png"
+          alt="Twitter Logo" width="25" height="25"> Twitter</a>
     </div>
-</footer>
+  </footer>
 
 <script src="scripts/scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
