--- a/contact.html
+++ b/contact.html
@@ -96,16 +96,20 @@
           </div>
         </div>
       </section>
+    </div>
+  </div>
+
+  <div id="footer-spacing"></div>
 </body>
 
 
 
-<footer class="w-100 fixed-bottom">
+<footer id="footer" class="w-100 fixed-bottom">
   <div class="footer-content p-3">
-    <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png"
-        alt="Facebook Logo" width="25" height="25"> Facebook</a>
-    <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png"
-        alt="Twitter Logo" width="25" height="25"> Twitter</a>
+    <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage"
+        src="Images/facebook.png" alt="Facebook Logo" width="25" height="25"> Facebook</a>
+    <a href="https://twitter.com/loaferstaunton" target="_blank"><img id="twitter-logo" class="footerImage"
+        src="Images/twitter.png" alt="Twitter Logo" width="25" height="25"> Twitter</a>
   </div>
 </footer>
 
