--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container-fluid navbar-conten">
-      <a class="navbar-brand" href="index.html">Loafers Sandwhich Bar</a>
+  <nav id="main-nav" class="navbar navbar-expand-lg navbar-light">
+    <div class="container-fluid navbar-content">
+      <a class="navbar-brand main-nav" href="index.html">Loafers Sandwhich Bar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -49,20 +49,20 @@
           </li>
         </ul>
         <div class="ms-auto">
-          <div id="dark-button" class="btn btn-primary mx-3 rounded" onclick="toggleDark()">My Account</div>
+          <div id="dark-button" class="btn btn-primary mx-3 rounded" onclick="toggleDark()">Dark Mode</div>
         </div>
       </div>
     </div>
   </nav>
 
   <div>
-    <h1 class="title">Welcome to Loafers!</h1>
+    <h1 id="title" class="title">Welcome to Loafers!</h1>
   </div>
 
 
 
 
-  <div class="container-fluid">
+  <div id="main-content" class="container-fluid">
     <div class="page-content">
       <p class="py-3">Situated in Somerset's county town of Taunton, Loafers has been open since 1978 and is still
         offering a great selection of hot and cold food from our shop located on the historic Bath Place.</p>
@@ -73,22 +73,22 @@
         visit and you can have a little treat on us.</p>
       <img id="loyalty-card" class="pb-3" src="images/loyalty_stamp.jpg" alt="Loyalty stamps">
       <p class="pt-5 m-0 text-decoration-underline">Allegen Information</p>
-      <p>Please be aware that some of our products may contain one or more of the 14 main allergens that can be harmful
+      <p class="mb-0">Please be aware that some of our products may contain one or more of the 14 main allergens that can be harmful
         if eaten, if you are ordering over the telephone or are visiting the shop, please make the member of staff you
         talk to aware of any specific allergens or other dietary requirement.</p>
     </div>
   </div>
 
-
+  <div id="footer-spacing"></div>
 </body>
 
 
 
-<footer class="w-100 fixed-bottom">
+<footer id="footer" class="w-100 fixed-bottom">
   <div class="footer-content p-3">
-    <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png"
+    <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage" src="Images/facebook.png"
         alt="Facebook Logo" width="25" height="25"> Facebook</a>
-    <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png"
+    <a href="https://twitter.com/loaferstaunton" target="_blank"><img id="twitter-logo" class="footerImage" src="Images/twitter.png"
         alt="Twitter Logo" width="25" height="25"> Twitter</a>
   </div>
 </footer>
