Fixed minor grammatical error

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <p class="pt-5 m-0 text-decoration-underline">Allegen Information</p>
       <p class="mb-0">Please be aware that some of our products may contain one or more of the 14 main allergens that can be harmful
         if eaten, if you are ordering over the telephone or are visiting the shop, please make the member of staff you
-        talk to aware of any specific allergens or other dietary requirement.</p>
+        talk to aware of any specific allergens or other dietary requirements.</p>
     </div>
   </div>
 
