Weather is now capitalised and displayed on a new line.

--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
         happily to deliver for free in Taunton but a small charge may be made for the surrounding areas. At the moment
         we don't really deliver smaller orders but if it's a sensible order we'll certainly do what we can to get it to
         you.</p>
-      <p class="pt-4 text-decoration-underline">Map Directions:</p>
+      <p class="pt-4 text-decoration-underline">Map Directions and Weather Conditions:</p>
 
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5020.22613213925!2d-3.1048!3d51.01406!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2df2125992726a7!2sLoafers%20Sandwich%20Bar!5e0!3m2!1sen!2sus!4v1647881626365!5m2!1sen!2sus"
