Gave footer an absolute position

--- a/breakfasts.html
+++ b/breakfasts.html
@@ -38,7 +38,7 @@
               <li><a id="current-dropdown" class="dropdown-item dropdown-current-page" href="breakfasts.html">Breakfast Menu</a></li>
               <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a></li>
               <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps & Roasts</a></li>
-              <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salads</a></li>
+              <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salad Boxes</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -300,7 +300,7 @@
 
 
 
-      <h2 class="menu-title">Extras:</h2>
+      <h2 class="menu-title">Extras or Box it Off:</h2>
       <div class="row">
         <div class="col">
           <h4>Bacon per rasher</h4>
@@ -389,12 +389,11 @@
       </div>
     </div>
   </section>
-
-  <div id="footer-spacing"></div>
 </body>
 
 
-<footer id="footer" class="w-100 fixed-bottom">
+
+<footer id="footer">
   <div class="footer-content p-3">
     <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage" src="Images/facebook.png"
         alt="Facebook Logo" width="25" height="25"> Facebook</a>
