--- a/cold_fillings_salads.html
+++ b/cold_fillings_salads.html
@@ -38,7 +38,7 @@
               <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
               <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a></li>
               <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps & Roasts</a></li>
-              <li><a id="current-dropdown" class="dropdown-item dropdown-current-page" href="cold_fillings_salads.html">Cold Fillings & Salads</a></li>
+              <li><a id="current-dropdown" class="dropdown-item dropdown-current-page" href="cold_fillings_salads.html">Cold Fillings & Salad Boxes</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -56,7 +56,7 @@
   </nav>
 
   <div>
-    <h1 id="title" class="title">Cold Fillings and Salads!</h1>
+    <h1 id="title" class="title">Cold Fillings and Salad Boxes!</h1>
   </div>
 
 
@@ -187,7 +187,9 @@
 
 
             <h2 class="menu-title">Salad Boxes:</h2>
-            <div class="row">
+            <p class="menu-info text-center mb-3 mt-0">We offer a wide selection of hot and cold toppings to accompany our freshly prepared salad items, served in a container with a fully compostable knife and fork.</p>
+            <p class="menu-info text-center mt-3">To give you an idea, here are a few examples of what we offer:</p>
+            <div class="row pt-3">
                 <div class="col">
                     <h4>Just Fresh Salad</h4>
                 </div>
@@ -287,12 +289,10 @@
             </div>
         </div>
     </section>
-
-    <div id="footer-spacing"></div>
 </body>
 
 
-<footer id="footer" class="w-100 fixed-bottom">
+<footer id="footer">
     <div class="footer-content p-3">
       <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage" src="Images/facebook.png"
           alt="Facebook Logo" width="25" height="25"> Facebook</a>
