--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
               <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
               <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a></li>
               <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps & Roasts</a></li>
-              <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salads</a></li>
+              <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salad Boxes</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -79,12 +79,13 @@
       <p id="weather-info"></p>
 
       <p class="pt-5 m-0 mt-3 text-decoration-underline">Further Enquires:</p>
-      <p class="mb-3">if you have any further enquires, please fill out this form and we will email you back as soon as we can!</p>
-
-
-
+      <p class="mb-3">if you have any further enquires, please fill out this form and we will email you back as soon as
+        we can!</p>
     </div>
   </div>
+
+
+
   <section class="form-area">
     <div class="container-fluid p-0 m-0">
       <div class="form-position">
@@ -102,12 +103,11 @@
       </div>
     </div>
   </section>
-  <div id="footer-spacing"></div>
 </body>
 
 
 
-<footer id="footer" class="w-100 fixed-bottom">
+<footer id="footer">
   <div class="footer-content p-3">
     <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage"
         src="Images/facebook.png" alt="Facebook Logo" width="25" height="25"> Facebook</a>
