--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
               <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a></li>
               <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps & Roasts</a></li>
-              <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salads</a></li>
+              <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salad Boxes</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -78,13 +78,11 @@
         talk to aware of any specific allergens or other dietary requirements.</p>
     </div>
   </div>
-
-  <div id="footer-spacing"></div>
 </body>
 
 
 
-<footer id="footer" class="w-100 fixed-bottom">
+<footer id="footer">
   <div class="footer-content p-3">
     <a href="https://facebook.com/loaferstaunton" target="_blank"><img id="facebook-logo" class="footerImage" src="Images/facebook.png"
         alt="Facebook Logo" width="25" height="25"> Facebook</a>
