--- a/contact.html
+++ b/contact.html
@@ -82,31 +82,34 @@
       <p class="pt-5 m-0 mt-3 text-decoration-underline">Further Enquires:</p>
       <p class="mb-3">if you have any further enquires, please fill out this form and we will email you back as soon as
         we can!</p>
+      
+        <section id="form-area">
+          <div class="container-fluid p-0 m-0">
+            <div id="enquiry-text">
+            <form onsubmit="changeText()" method="post" id="enquiry-form">
+              <label>Please enter your name:</label><br>
+              <input class="form-inputs" type="text" placeholder="Enter name..." name="fname" required><br>
+              <br>
+              <label>Please enter your email:</label><br>
+              <input class="form-inputs" type="email" placeholder="Enter email..." required><br>
+              <br>
+              <label>Please enter your enquiry:</label><br>
+              <textarea class="form-inputs" cols="48" rows="12" placeholder="Enter enquiry..." required></textarea><br>
+              <input type="submit" value="Submit!">
+            </form>
+            </div>
+          </div>
+        </section>
 
 
-      <section id="form-area">
-        <div class="container-fluid p-0 m-0">
-          <form onsubmit="changeText()" method="post" id="enquiry-form">
-            <label>Please enter your name:</label><br>
-            <input class="form-inputs" type="text" placeholder="Enter name..." name="fname" required><br>
-            <br>
-            <label>Please enter your email:</label><br>
-            <input class="form-inputs" type="email" placeholder="Enter email..." required><br>
-            <br>
-            <label>Please enter your enquiry:</label><br>
-            <textarea class="form-inputs" cols="48" rows="12" placeholder="Enter enquiry..." required></textarea><br>
-            <input type="submit" value="Submit!">
-          </form>
-        </div>
-      </section>
     </div>
   </div>
 
 
-  </div>
 
 
 
+  
 
 </body>
 
