--- a/menus.html
+++ b/menus.html
@@ -59,9 +59,9 @@
   </div>
 
 
-
-  <section id="main-content">
-    <div id="menu-cards">
+  <div id="main-content" class="page-content">
+  <section id="menu-cards">
+    
       <div class="container-fluid">
         <div class="row">
           <div class="col menu-box">
@@ -100,8 +100,9 @@
             </div>
           </div>
         </div>
-      </div>
+      
   </section>
+</div>
 </body>
 
 
